Add javadoc comments to all classes and methods