@@ -9,15 +9,42 @@ package backgammon.board;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * Represents the board in a backgammon game, consisting of points, a bar, and an off area.
+ */
 public class Board {
+    /**
+     * The number of checkers each player has in a game.
+     */
     static public int NUMBER_OF_CHECKERS_PER_PLAYER = 15;
+
+    /**
+     * The total number of points on the board.
+     */
+    static final int NUMBER_OF_POINTS = 24;
+
+    /**
+     * -3 used to denote the bar in indexing
+     */
+    static public int BAR_FLAG = -3;
+
+    /**
+    * -1 used to denote the Blue off in indexing
+    */
+    static public int BLUE_OFF_FLAG = -1;
+
+    /**
+     * -2 used to denote the Red off in indexing
+     */
+    static public int RED_OFF_FLAG = -2;
 
     private final List<Point> points;
     private final Bar bar;
     private final Off off;
 
-    static final int NUMBER_OF_POINTS = 24;
-
+    /**
+     * Initializes a new Board with empty points, a bar, and an off area.
+     */
     public Board() {
         this.points = new ArrayList<>();
         for (int i = 0; i < NUMBER_OF_POINTS; i++) {
@@ -28,24 +55,51 @@ public class Board {
         this.off = new Off();
     }
 
+    /**
+     * Initializes a new Board with the specified points, bar, and off area.
+     *
+     * @param points the list of points on the board
+     * @param bar    the bar containing checkers
+     * @param off    the off area where checkers are moved after being borne off
+     */
     public Board(List<Point> points, Bar bar, Off off) {
         this.points = points;
         this.bar = bar;
         this.off = off;
     }
 
+    /**
+     * Retrieves an unmodifiable list of points on the board.
+     *
+     * @return the list of points
+     */
     public List<Point> getPoints() {
         return List.copyOf(points);
     }
 
+    /**
+     * Retrieves the bar containing checkers that have been hit.
+     *
+     * @return the bar
+     */
     public Bar getBar() {
         return this.bar;
     }
 
+    /**
+     * Retrieves the off area where checkers are placed after being borne off.
+     *
+     * @return the off area
+     */
     public Off getOff() {
         return this.off;
     }
 
+    /**
+     * Creates a deep copy of the current Board instance.
+     *
+     * @return a new Board instance that is a deep copy of the current board
+     */
     public Board cloneBoard() {
         List<Point> clonedPoints = new ArrayList<>();
         for (Point point : this.points) {
@@ -57,10 +111,14 @@ public class Board {
         return new Board(clonedPoints, clonedBar, clonedOff);
     }
 
+    /**
+     * Initializes the board to the starting position for a backgammon game,
+     * placing checkers on their respective points according to the standard rules.
+     */
     public void initialiseStartingPosition() {
-        // Black checkers
-        this.points.get(0).addChecker(new Checker(Color.RED));  // 2 checkers on point 1
-        this.points.get(0).addChecker(new Checker(Color.RED));
+        // RED checkers
+        this.points.getFirst().addChecker(new Checker(Color.RED));  // 2 checkers on point 1
+        this.points.getFirst().addChecker(new Checker(Color.RED));
 
         this.points.get(11).addChecker(new Checker(Color.RED));  // 5 checkers on point 12
         for (int i = 0; i < 4; i++) {
@@ -77,7 +135,7 @@ public class Board {
             this.points.get(18).addChecker(new Checker(Color.RED));
         }
 
-        // White checkers
+        // Blue checkers
         this.points.get(23).addChecker(new Checker(Color.BLUE));  // 2 checkers on point 24
         this.points.get(23).addChecker(new Checker(Color.BLUE));
 
